@@ -44,16 +44,16 @@ _initialize_i386obsd_nat (void)
     int mib[2];
     size_t len;
 
-    extern CORE_ADDR i386nbsd_sigtramp_start;
-    extern CORE_ADDR i386nbsd_sigtramp_end;
+    extern CORE_ADDR i386obsd_sigtramp_start;
+    extern CORE_ADDR i386obsd_sigtramp_end;
 
     mib[0] = CTL_VM;
     mib[1] = VM_PSSTRINGS;
     len = sizeof (_ps);
     if (sysctl (mib, 2, &_ps, &len, NULL, 0) == 0)
       {
-	i386nbsd_sigtramp_start = (CORE_ADDR)_ps.val - 128;
-	i386nbsd_sigtramp_end = (CORE_ADDR)_ps.val;
+	i386obsd_sigtramp_start = (CORE_ADDR)_ps.val - 128;
+	i386obsd_sigtramp_end = (CORE_ADDR)_ps.val;
       }
   }
 #endif
